Keyframing custom properties with "I" keyframes property groups defined in python #119909

Closed
opened 2024-03-26 10:11:23 +01:00 by Nika Kutsniashvili · 3 comments
Contributor

System Information
Operating system: Windows-10-10.0.19043-SP0 64 Bits
Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23

Blender Version
Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-22 19:59, hash: 64bfe491645f
Worked: (newest version of Blender that worked as expected)

Short description of error
New keyframe operator on "I" that automatically keyframes Loc/Rot/Scale/Custom (whatever you have selected in preferences) also puts keyframes on property groups defined by python add-ons, that are only visible if you have Developer Extras enabled. That includes cycles property group, which I suspect can cause some problems.

image

Exact steps for others to reproduce the error

  1. Open default startup file
  2. Make sure in Preferences > Animation > Keyframes in default key channels Custom Properties is enabled
  3. Make sure "Developer Extras" is enabled so see property groups
  4. Select cube and press I
  5. In Dope Sheet channels, at the end you'll see "cycles" property group has been keyframed.
**System Information** Operating system: Windows-10-10.0.19043-SP0 64 Bits Graphics card: NVIDIA GeForce GTX 1650/PCIe/SSE2 NVIDIA Corporation 4.6.0 NVIDIA 551.23 **Blender Version** Broken: version: 4.1.0 Release Candidate, branch: blender-v4.1-release, commit date: 2024-03-22 19:59, hash: `64bfe491645f` Worked: (newest version of Blender that worked as expected) **Short description of error** New keyframe operator on "I" that automatically keyframes Loc/Rot/Scale/Custom (whatever you have selected in preferences) also puts keyframes on property groups defined by python add-ons, that are only visible if you have Developer Extras enabled. That includes cycles property group, which I suspect can cause some problems. ![image](/attachments/fdf4ac12-2bc2-437f-a486-a1335d791aa6) **Exact steps for others to reproduce the error** 1. Open default startup file 2. Make sure in Preferences > Animation > Keyframes in default key channels Custom Properties is enabled 3. Make sure "Developer Extras" is enabled so see property groups 4. Select cube and press I 5. In Dope Sheet channels, at the end you'll see "cycles" property group has been keyframed.
Nika Kutsniashvili added the
Status
Needs Triage
Severity
Normal
Type
Report
labels 2024-03-26 10:11:23 +01:00
Author
Contributor

Old "Location, Rotation, Scale & Custom Properties" keying set that was on I in 4.0 and now is on K doesn't do this. So before 4.1 there was no way to keyframe property groups defined in python.

Old "Location, Rotation, Scale & Custom Properties" keying set that was on I in 4.0 and now is on K doesn't do this. So before 4.1 there was no way to keyframe property groups defined in python.
Christoph Lendenfeld self-assigned this 2024-03-26 12:47:39 +01:00

I wanted to report this as well, but was checking and saw it's already reported (Thanks @nickberckley ). Just wanted to mention, I already ran into issues coming from this in my addons, during bake. I could solve it within the addon but it's wierd to have this non-animated properties keyframed.

Here is another quick way to reproduce it:
With Rigify turned on, add Human Meta rig.
Add a keyframe to the spine or any bone.
You will get some extra properties keyframed like rigify type and rigify parameters

grafik

I wanted to report this as well, but was checking and saw it's already reported (Thanks @nickberckley ). Just wanted to mention, I already ran into issues coming from this in my addons, during bake. I could solve it within the addon but it's wierd to have this non-animated properties keyframed. Here is another quick way to reproduce it: With Rigify turned on, add Human Meta rig. Add a keyframe to the spine or any bone. You will get some extra properties keyframed like rigify type and rigify parameters ![grafik](/attachments/ebd12a7b-72b1-4949-8873-68496ac29fcc)
Blender Bot added
Status
Resolved
and removed
Status
Confirmed
labels 2024-04-12 14:48:25 +02:00

Old "Location, Rotation, Scale & Custom Properties" keying set that was on I in 4.0 and now is on K doesn't do this. So before 4.1 there was no way to keyframe property groups defined in python.

I'm not sure what the proper etiquette is commenting on ones marked Closed, but I had question about the post quoted above. Is there a way to force Python-defined PropertyGroup properties to be keyable in version 4.1+? I'm addon developer TRYING to keyframe PropertyGroup properties and can't because it can't access filepath even when I manually supply it. I also saw a post from Campbell Barton from many years ago mentioning this, but I was hoping this limitation would be much less dumb by now. It seems like this bug fix's is_idproperty_keyable function would make that even less likely.

> Old "Location, Rotation, Scale & Custom Properties" keying set that was on I in 4.0 and now is on K doesn't do this. So before 4.1 there was no way to keyframe property groups defined in python. I'm not sure what the proper etiquette is commenting on ones marked Closed, but I had question about the post quoted above. Is there a way to force Python-defined PropertyGroup properties to be keyable in version 4.1+? I'm addon developer TRYING to keyframe PropertyGroup properties and can't because it can't access filepath even when I manually supply it. I also saw a post from Campbell Barton from many years ago mentioning this, but I was hoping this limitation would be much less dumb by now. It seems like this bug fix's is_idproperty_keyable function would make that even less likely.
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset System
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Viewport & EEVEE
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Asset Browser Project
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Module
Viewport & EEVEE
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Severity
High
Severity
Low
Severity
Normal
Severity
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#119909
No description provided.